--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <ul>
       <li> <a href="https://appbrewery.github.io/capstone-1-example/">My hobby</a></li>
     </ul>
+    <hr />
+    <a href="./hobby">Hobby</a>
     <footer>
         <p>© 2018 Gandalf</p>
       </footer>
