--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li> <a href="https://appbrewery.github.io/capstone-1-example/">My hobby</a></li>
     </ul>
     <hr />
-    <a href="./hobby">My favorite movie</a>
+    <a href="./hobby.html">My favorite movie</a>
     <footer>
         <p>© 2018 Gandalf</p>
       </footer>
