--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Tran Thanh Mai</h1>
-    <img src="./mai.jpeg" height=200>
+    <img src="./mai.jpeg" height="200">
     <h2>Summary</h2>
     <p>I'm 26 years old, I'm living in Malaysia</p>
     <hr />
